force-app/main/default/objects/Pago_factura__c/Pago_factura__c.object-meta.xml
<CustomObject>
    <label>Pago factura</label>
    <nameField>
        <displayFormat>FP-{00000000}</displayFormat>
        <label>Nombre de Pago factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos facturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>