force-app/main/default/objects/Pago_factura__c/fields/Importe_en_dolares__c.field-meta.xml
<CustomField>
    <fullName>Importe_en_dolares__c</fullName>
    <label>Importe en dolares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>