force-app/main/default/objects/Pago_factura__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moneda</label>
    <referenceTo>Moneda__c</referenceTo>
    <relationshipLabel>Pagos facturas</relationshipLabel>
    <relationshipName>Pagos_facturas</relationshipName>
    <type>Lookup</type>
</CustomField>