force-app/main/default/objects/Pago_factura__c/fields/Remito__c.field-meta.xml
<CustomField>
    <fullName>Remito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remito</label>
    <referenceTo>Remito__c</referenceTo>
    <relationshipLabel>Pagos facturas</relationshipLabel>
    <relationshipName>Pagos_facturas</relationshipName>
    <type>Lookup</type>
</CustomField>