force-app/main/default/objects/Pago_factura__c/fields/Tipo_de_cambio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cambio__c</fullName>
    <formula>Importe__c / Importe_en_dolares__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de cambio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>